[gd_scene load_steps=5 format=3 uid="uid://bp6qieulabmkn"]

[ext_resource type="Theme" uid="uid://cesgvqexxaqev" path="res://assets/windows_95_theme.tres" id="1_whgi6"]
[ext_resource type="Texture2D" uid="uid://mb2q2hy3djdx" path="res://assets/cog.png" id="3_da702"]
[ext_resource type="Script" uid="uid://depfu1b1jt3ke" path="res://components/apps/grinderr/grinderr.gd" id="3_ssc06"]
[ext_resource type="Texture2D" uid="uid://ulcids0e12dp" path="res://assets/worker.png" id="4_ljbn4"]

[node name="GrinderrWindow" type="Panel"]
auto_translate_mode = 1
offset_right = 250.0
offset_bottom = 250.0
theme = ExtResource("1_whgi6")
script = ExtResource("3_ssc06")
app_title = "Grinderr"
app_icon = ExtResource("3_da702")
metadata/_custom_type_script = "uid://c1qvasiiw126v"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="GrindButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("1_whgi6")
text = "Grind"

[node name="SubcontractThirdWorldGrinderButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme = ExtResource("1_whgi6")
theme_override_font_sizes/font_size = 11
text = "Subcontract Third World Grinder
$1/s for $10"
icon = ExtResource("4_ljbn4")

[node name="SubcontractorLabel" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Subcontractors: 0"

[node name="SubcontractorTimer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/GrindButton" to="." method="_on_grind_button_pressed"]
[connection signal="pressed" from="MarginContainer/ScrollContainer/VBoxContainer/SubcontractThirdWorldGrinderButton" to="." method="_on_subcontract_third_world_grinder_button_pressed"]
[connection signal="timeout" from="SubcontractorTimer" to="." method="_on_subcontractor_timer_timeout"]
